--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,14 +5,29 @@
 
 body{
     margin: 0;
+    text-align: center;
+    font-family: 'Merriweather', serif;
 }
 
 h1{
+    font-family: 'Sacramento', cursive;
     margin-top: 0;
+}
+h2{
+    font-family: 'Montserrat', sans-serif;
+}
+
+h3{
+    font-family: 'Montserrat', sans-serif;
+}
+.pro{
+    text-decoration: underline;
 }
 
 .top-container {
     background-color: #E4F9F5;
+    padding-top: 100px;
+    position: relative;
 }
 
 .middle-container {
@@ -24,4 +39,18 @@ h1{
     height: 200px;
     width: 200px;
     background-color: rgb(3, 90, 101);
+}
+
+.top-cloud{
+    position: absolute;
+    /* right: 300px;
+    top: 50px; */
+    margin-left: 15%;
+}
+
+.bottom-cloud{
+    position: absolute;
+    /* left: 300px;
+    bottom: 300px; */
+    margin-right: 20%;
 }
