--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,14 @@ body{
     margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
+    font-size: 200%;
 }
 
 h1{
-    /* 1em = 16px */
-    font-size: 5em;
+    /* 1em = 16px  rem is most responsive */
+    font-size: 5.6rem;
     font-family: 'Sacramento', cursive;
-    margin-top: 0;
+    margin: 50px auto 0 auto;
 }
 h2{
     font-family: 'Montserrat', sans-serif;
@@ -21,6 +22,10 @@ h2{
 
 h3{
     font-family: 'Montserrat', sans-serif;
+}
+
+.caption {
+    font-size: 2.5rem;
 }
 .pro{
     text-decoration: underline;
