added some todos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,3 +111,6 @@ width: 25%;
 p{
     font-size: 1.2rem;
 }
+
+/* going to redo alot of the styles and change up color pallette */
+/* Need to add some animations possibly to clouds and or menu or icons */
